# minecraft-ping-plasmoid

./: CMakeLists.txt  README.md
minecraftserverpingplugin/: CMakeLists.txt  formatcodeconverter.cpp  minecraftserver.cpp  minecraftserver.h  serverlistmodel.cpp
package/: metadata.json
package/contents/config/: config.qml
package/contents/ui/: MinecraftServerFullDelegate.qml  MinecraftServerIconDelegate.qml  Motd.qml  configServer.qml  main.qml
